# uncertainty-aware-visual-budgeting

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
artifacts/: .gitkeep
configs/: default.yaml  llava.yaml  qwen.yaml  qwen_rsvqa.yaml  qwen_rsvqa_hr.yaml  qwen_xlrs.yaml  qwen_xlrs_accsafe_a.yaml  qwen_xlrs_accsafe_b.yaml
deploy/: _run_ablation.py  _run_real.py  aws_setup.sh  prepare_rsvqa.py  prepare_xlrs.py  requirements-gpu.txt  run_on_aws.sh
scripts/: results_to_latex.py  run_eval.py  smoke_test.py  train_calibrator.py
tests/: test_pipeline.py
uavib/: __init__.py  attribution.py  budget.py  calibration.py  cli.py  config.py  eval.py  metrics.py  pipeline.py  train.py  types.py  uncertainty.py
uavib/backends/: __init__.py  base.py  dummy.py  hf_common.py  llava.py  qwen.py
uavib/baselines/: __init__.py  methods.py
uavib/data/: __init__.py  real.py  synthetic.py
