[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uavib"
version = "0.1.0"
description = "Uncertainty-Calibrated Adaptive Vision-Token Budgeting for efficient and reliable MLLMs on high-resolution structured imagery"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "UAViB Authors" }]
keywords = [
    "multimodal-llm",
    "vision-language",
    "token-reduction",
    "uncertainty",
    "calibration",
    "efficient-inference",
]

# Minimal dependencies so the pipeline (with the dummy backend) runs anywhere.
# Heavy MLLM backends are optional extras (see [project.optional-dependencies]).
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "scikit-learn>=1.1",
    "pyyaml>=6.0",
    "pillow>=9.0",
    "tqdm>=4.64",
]

[project.optional-dependencies]
# Real MLLM backends + plotting. Installed on the GPU/AWS box.
gpu = [
    "torch>=2.1",
    "torchvision>=0.16",
    "transformers>=4.49",
    "accelerate>=0.30",
    "qwen-vl-utils>=0.0.8",
    "sentencepiece>=0.1.99",
    "einops>=0.7",
]
viz = ["matplotlib>=3.6"]
dev = ["pytest>=7.0", "matplotlib>=3.6"]

[project.scripts]
uavib-eval = "uavib.cli:main_eval"
uavib-train-calibrator = "uavib.cli:main_train_calibrator"

[tool.setuptools.packages.find]
where = ["."]
include = ["uavib*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
